# xterm-snapshots

./: 256colres.h  256colres.pl  88colres.h  88colres.pl  AAA_README_VMS.txt  COPYING  INSTALL  Imakefile  MANIFEST  Makefile.in  README.os390  THANKS  TekPrsTbl.c  Tekparse.h  Tekproc.c  UXTerm.ad  VTPrsTbl.c  VTparse.def  VTparse.h  XTerm-col.ad  XTerm.ad  aclocal.m4  button.c  cachedGCs.c  charclass.c  charclass.h  charproc.c  charsets.c  charsets.h  config.guess  config.sub  configure  configure.in  ctlseqs.ms  ctlseqs.txt  cursor.c  data.c  data.h  df-install.in  doublechr.c  (+71 more)
icons/: make-xpms  mini.xterm.xcf  mini.xterm.xpm  mini.xterm.xpms  mini.xterm_16.xcf  mini.xterm_16x16.xpm  mini.xterm_256x256.xcf  mini.xterm_32x32.xcf  mini.xterm_32x32.xpm  mini.xterm_48x48.xpm  terminal_48x48.xcf  xterm-color.xpms  xterm-color_16x16.xpm  xterm-color_32x32.xpm  xterm-color_48x48.xpm  xterm.xpms  xterm_16x16.xpm
package/: xterm.spec
package/debian/: changelog  copyright  rules  xterm-dev.lintian-overrides
package/freebsd/: Makefile  distinfo
package/pkgsrc/: Makefile  distinfo
tektests/: aitest.tek  dmerc.tek  fotest.tek  ocpred.tek  usmap.tek
unicode/: README  convmap.pl  keysym.map  make-precompose.sh  precompose.c.head
vttests/: 16colors.sh  256colors.pl  256colors2.pl  88colors.pl  88colors2.pl  8colors.sh  acolors.sh  doublechars.sh  dynamic.pl  dynamic.sh  dynamic2.sh  fonts.sh  modify-keys.pl  mouse-codes  other-sgr.sh  print-vt-chars.pl  query-color.pl  query-dynamic.pl  query-fonts.pl  query-status.pl  report-sgr.pl  resize.sh  sgrPushPop.pl  sgrPushPop2.pl  tcapquery.pl  title.sh  true-color.pl  utf8.pl
